--- a/marrtino_control/config/control.yaml
+++ b/marrtino_control/config/control.yaml
@@ -2,7 +2,7 @@ marrtino_joint_publisher:
   type: "joint_state_controller/JointStateController"
   publish_rate: 50
 
-marrtino_velocity_controller:
+marrtino_base_controller:
   type: "diff_drive_controller/DiffDriveController"
   left_wheel: 'left_wheel_joint'
   right_wheel: 'right_wheel_joint'
@@ -13,11 +13,8 @@ marrtino_velocity_controller:
   velocity_rolling_window_size: 2
 
   # Base frame_id
-  base_frame_id: base_link
-
-  # Odometry fused with IMU is published by robot_localization, so
-  # no need to publish a TF based on encoders alone.
-  enable_odom_tf: false
+  base_frame_id: base_footprint
+  odom_frame_id: odom
 
   # Husky hardware provides wheel velocities
   estimate_velocity_from_position: false
