--- a/marrtino_control/config/control.yaml
+++ b/marrtino_control/config/control.yaml
@@ -10,14 +10,11 @@ marrtino_base_controller:
   pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
   cmd_vel_timeout: 0.25
-  velocity_rolling_window_size: 2
 
   # Base frame_id
   base_frame_id: base_footprint
   odom_frame_id: odom
-
-  # Husky hardware provides wheel velocities
-  estimate_velocity_from_position: false
+  enable_odom_tf: true 
 
   wheel_separation: 0.37
   wheel_radius    : 0.07
