--- a/marrtino_navigation/config/costmap_common.yaml
+++ b/marrtino_navigation/config/costmap_common.yaml
@@ -12,7 +12,7 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 
 static_layer:
-    map_topic: /map
+    map_topic: map
     subscribe_to_updates: true
 
 obstacle_layer:
