Control config improvements

--- a/marrtino_control/config/control.yaml
+++ b/marrtino_control/config/control.yaml
@@ -1,4 +1,4 @@
-marrtino_joint_publisher:
+joint_state_controller:
   type: "joint_state_controller/JointStateController"
   publish_rate: 50
 
@@ -7,17 +7,17 @@ marrtino_base_controller:
   left_wheel: 'left_wheel_joint'
   right_wheel: 'right_wheel_joint'
   publish_rate: 50
-  pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
-  twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+  pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+  twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
   cmd_vel_timeout: 0.25
 
   # Base frame_id
   base_frame_id: base_footprint
   odom_frame_id: odom
-  enable_odom_tf: true 
+  enable_odom_tf: true
 
-  wheel_separation: 0.37
-  wheel_radius    : 0.07
+  # wheel_separation: 0.40
+  # wheel_radius    : 0.07
 
   # Wheel separation and radius multipliers
   wheel_separation_multiplier: 1.0 # default: 1.0
@@ -28,12 +28,12 @@ marrtino_base_controller:
   linear:
     x:
       has_velocity_limits    : true
-      max_velocity           : 0.5   # m/s
+      max_velocity           : 1.75   # m/s
       has_acceleration_limits: true
-      max_acceleration       : 1.0   # m/s^2
+      max_acceleration       : 3.0   # m/s^2
   angular:
     z:
       has_velocity_limits    : true
-      max_velocity           : 2.0   # rad/s
+      max_velocity           : 6.0   # rad/s
       has_acceleration_limits: true
       max_acceleration       : 6.0 # rad/s^2
