--- a/marrtino_navigation/config/costmap_local.yaml
+++ b/marrtino_navigation/config/costmap_local.yaml
@@ -2,5 +2,5 @@ global_frame: odom
 rolling_window: true
 
 plugins:
-  - {name: obstacles_layer,                 type: "costmap_2d::ObstacleLayer"}
+  - {name: obstacle_layer,                  type: "costmap_2d::ObstacleLayer"}
   - {name: inflation_layer,                 type: "costmap_2d::InflationLayer"}
