--- a/marrtino_navigation/config/planner.yaml
+++ b/marrtino_navigation/config/planner.yaml
@@ -4,6 +4,7 @@ recovery_behaviour_enabled: true
 NavfnROS:
   allow_unknown: false # Specifies whether or not to allow navfn to create plans that traverse unknown space.
   default_tolerance: 0.0 # A tolerance on the goal point for the planner.
+  
 
 DWAPlannerROS:
   # Robot configuration parameters
@@ -25,17 +26,17 @@ DWAPlannerROS:
   latch_xy_goal_tolerance: false
 
   # # Forward Simulation Parameters
-  sim_time: 1.0
+  sim_time: 3.0
   # sim_granularity: 0.02
-  vx_samples: 6
-  vy_samples: 1
-  vtheta_samples: 20
+  vx_samples: 3
+  vy_samples: 0
+  vth_samples: 20 
   # penalize_negative_x: true
 
   # # Trajectory scoring parameters
-  path_distance_bias: 64.0 # The weighting for how much the controller should stay close to the path it was given
+  path_distance_bias: 32.0 # The weighting for how much the controller should stay close to the path it was given
   goal_distance_bias: 24.0 # The weighting for how much the controller should attempt to reach its local goal, also controls speed
-  occdist_scale: 0.5 # The weighting for how much the controller should attempt to avoid obstacles
+  occdist_scale: 0.01 # The weighting for how much the controller should attempt to avoid obstacles
   forward_point_distance: 0.325 # The distance from the center point of the robot to place an additional scoring point, in meters
   stop_time_buffer: 0.2  # The amount of time that the robot must stThe absolute value of the veolicty at which to start scaling the robot's footprint, in m/sop before a collision in order for a trajectory to be considered valid in seconds
   scaling_speed: 0.25 # The absolute value of the veolicty at which to start scaling the robot's footprint, in m/s
